fix: click on arrow not showing options

--- a/src/components/DatePicker/styles.css
+++ b/src/components/DatePicker/styles.css
@@ -2,12 +2,14 @@
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+  background: transparent;
 }
 
 .dropdownPos {
   position: absolute;
   left: 136px;
   top: 48px;
+  z-index: -1;
 }
 
 input::-webkit-outer-spin-button,
